Fix color of next button in dark mode.
Apply @0AhmadKhan's [suggestion](https://github.com/OpenSourceEconomics/epp_topics/issues/48#issuecomment-2514172142). (#58)

--- a/src/epp_topics/_static/custom.css
+++ b/src/epp_topics/_static/custom.css
@@ -37,6 +37,10 @@
     --bs-table-bg: hsl(0, 0%, 12%) !important;
 }
 
+[data-theme='dark'] .next {
+    color: var(--pst-color-text-base) !important;
+}
+
 /* Set color of quiz for dark thme */
 
 html[data-theme=dark] .bd-content div.cell_output .text_html:not(:has(table.dataframe)) {
